--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             /* background-color: #4a0327; */
             background-image: url('image.jpg');
             background-size: cover;
-            background-repeat: no-repeat;
+            /* background-repeat: no-repeat; */
             margin: 0;
             padding: 10px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            height: 100%;
         }
 
         #main-container {
