--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <h1 id="message" class="animate__animated animate__zoomIn">You are the most amazing person in my life...</h1>
     <p style="color: rgb(191, 189, 189);font-size: large;" class="animate__animated animate__zoomIn">I know I may not have treated you well sometimes and this thing I did is unforgivable but believe me I didn't mean it seriously, I was joking which I didn't realize was sounding so bad at that time. I know I insulted you in front of her and I'm really sorry for that. Believe me, I can never have the intention of insulting you in front of anyone. I love you a lot. You know that. So please forgive me. I'm really sorry and I love you a lot. I promise to treat you really well from now on. From now on, I'm going to defend you and stand up for you if anyone speaks ill about you in front of me. I promise to take good care of you from now on. I'm really sorry about this. Please forgive me this time. I promise this will not happen again.  </p>
     <p style="color: rgb(191, 189, 189);font-size: x-large;" class="animate__animated animate__zoomIn">I LOVE YOU</p>
+    <p style="color: rgb(191, 189, 189);font-size: x-large;" class="animate__animated animate__zoomIn">YOU ARE ONLY MINE ❤️ 🥺</p>
     <p id="heart" class="animate__animated animate__pulse">❤️ ❤️ ❤️</p>
 </div>
 
